--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -19,11 +19,11 @@
   margin-right: auto;
   margin-left: auto;
   border: 12px solid transparent;
-  border-bottom-color: rgb(15, 66, 107);
+  border-bottom-color: rgb(143, 15, 228);
 }
 
 .login-header {
-  background: rgb(12, 77, 129);
+  background: rgb(0, 0, 0);
   padding: 20px;
   font-size: 1.4em;
   font-weight: normal;
@@ -73,11 +73,11 @@
 }
 
 .login input[type="submit"]:hover {
-  background: #17c;
+  background: rgb(160, 17, 165);
 }
 
 .login input[type="submit"]:focus {
-  border-color: #05a;
+  border-color: rgb(157, 21, 161);
 }
 
 .has-error input[type="uname"],
