--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,25 @@
-<p>admin works!</p>
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+  <!-- Links -->
+  <ul class="navbar-nav">
+
+    <li class="nav-item">
+      <a href="create" class="nav-link" routerLinkActive="active">Asset Creation</a>
+    </li>
+    <li class="nav-item">
+      <a href="list" class="nav-link" routerLinkActive="active">Vendor Creation</a>
+    </li>
+    <li class="nav-item">
+      <a href="masterorderlist" class="nav-link" routerLinkActive="active">Asset Master</a>
+    </li>
+
+    <!--li class="nav-item">
+      <a href="user" class="nav-link" routerLinkActive="active">Asset Master</a>
+    </li-->
+
+    <li class="nav-item">
+      <a href="#" class="nav-link" routerLinkActive="active" (click)="Logout()">Logout</a>
+    </li>
+  </ul>
+</nav>
+
+<img src="assets/Images/asset.png" style="height: 100%; width: 100%;">
