--- a/src/app/asset-list/asset-list.component.html
+++ b/src/app/asset-list/asset-list.component.html
@@ -1,3 +1,17 @@
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a href="create" class="nav-link" routerLinkActive="active">Add Assets </a>
+        <li class="nav-item">
+            <a href="addvendor" class="nav-link" routerLinkActive="active">Add Vendor </a>
+
+
+        <li class="nav-item">
+            <a href="#" class="nav-link" routerLinkActive="active" (click)="Logout()">Logout</a>
+        </li>
+    </ul>
+</nav>
 
 <div class="panel panel-primary">
     <div class="panel-heading">
@@ -13,25 +27,36 @@
                     <th>Asset Name</th>
                     <th>Asset Type</th>
                     <th>Asset Class</th>
-                   
+
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let asset of assets | async ">
+                <tr *ngFor="let asset of assets | async | paginate:{itemsPerPage:4,currentPage:p};let i=index">
                     <td>{{asset.ad_id}}</td>
                     <td>{{asset.ad_name}}</td>
-                    <td>{{asset.ad_type_id}}</td>
+                    <td>{{asset.ad_type}}</td>
                     <td>{{asset.ad_class}}</td>
-                    
-                    <td><button [routerLink]="['/edit',asset.ad_id]" class="btn btn-info" style="margin-left: 10px">Update</button>
+
+                    <td><button [routerLink]="['/edit',asset.ad_id]" class="btn btn-info"
+                            style="margin-left: 10px">Edit</button>
                         <button (click)="deleteAsset(asset.ad_id)" class="btn btn-danger">Delete</button>
+
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <div class="login">
+        <input type="text" placeholder="Enter the asset name" [(ngModel)]="searchAsset"
+            (ngModelChange)="search(searchAsset)" class="form-control" style="width:500px;">
+        <!--button type="submit" value="Search" (click)="search(searchAsset)" class="btn-info">Search</button>
+    </div-->
+
+    <div align="center">
+        <pagination-controls (pageChange)="p=$event"></pagination-controls>
+
+
+    </div>
 
 
 </div>
-
-
