--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <p [ngClass]="{ 'has-error': isSubmitted && formControls.pass.errors }">
-            <input type="pass" placeholder="password" formControlName="pass">
+            <input type="password" placeholder="password" formControlName="pass">
         </p>
 
         <div *ngIf="isSubmitted && formControls.pass.errors" class="help-block">
@@ -21,5 +21,9 @@
         <p>
             <input type="submit" value="Login">
         </p>
+        <div *ngIf="Error Message" class="alert alert-danger">
+            {{ErrorMessage}}
+
+        </div>
     </form>
 </div>
